Fixed more alignment

--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@
         background-color: #ADFFF7;
         font-size: 1rem;
         padding: 80px;
+        text-align: center;
     }
 
     .profile-link a:hover {
